Completed Assignment 2 and 3

--- a/EMPLOYEE_CODE/index.html
+++ b/EMPLOYEE_CODE/index.html
@@ -7,6 +7,11 @@
       <form id="form-element"  action="upload.php" method="POST">
          <table>
             <tr>
+               <td>Enter Your Employee Code :</td>
+               <td><input required type = "text" id="empcode" name = "empcode">
+               </td>
+            </tr> 
+            <tr>
                <td>Enter Your Employee Code Name:</td>
                <td><input required type = "text" id="empname" name = "empname">
                </td>
