--- a/EMPLOYEE_DETAILS/index.html
+++ b/EMPLOYEE_DETAILS/index.html
@@ -23,7 +23,7 @@
             </tr>
             <tr>
                <td>Enter Your Graduation Percentile: </td>
-               <td><input required  type = "text" name = "graduation_percentile" id="graduation_percentile">
+               <td><input required  type = "number" name = "graduation_percentile" id="graduation_percentile">
                </td>
             </tr>
             <tr>
