--- a/EMPLOYEE_SALARY/index.html
+++ b/EMPLOYEE_SALARY/index.html
@@ -7,13 +7,18 @@
       <form id="form-element"  action="upload.php" method="POST">
          <table>
             <tr>
-               <td>Enter Your Employee Code Name:</td>
-               <td><input required type = "text" id="empname" name = "empname">
+               <td>Enter Your Employee Code :</td>
+               <td><input required type = "text" id="empcode" name = "empcode">
                </td>
             </tr> 
             <tr>
-               <td>Enter Your Domain: </td>
-               <td><input required  type = "text" name = "empdomain" id="empdomain">
+               <td>Enter Your Salary:</td>
+               <td><input required type = "text" id="empsal" name = "empsal">
+               </td>
+            </tr> 
+            <tr>
+               <td>Enter Your Employee ID: </td>
+               <td><input required  type = "text" name = "empid" id="empid">
                </td>
             </tr>
             <tr>
